deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-container
        image: gillesganesh/flask-app:latest  # Remplacez par votre image Docker Hub
        ports:
        - containerPort: 8000  # Assurez-vous que c'est un nombre (sans guillemets)
      restartPolicy: Always
