fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app  
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000  
    - name: admin
      protocol: TCP
      port: 8080
      targetPort: 8080  
  type: LoadBalancer
