ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress  # Nouveau nom pour l'Ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: myservice.info  # Le nom de domaine que tu as configuré dans /etc/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service  # Nom du service FastAPI
                port:
                  number: 8080
